# wp_turtlebot3

./: .gitignore  OS_Setup.txt  OpenCR_Setup.txt  README.md
turtlebot3_bringup/launch/: robot.launch.py  turtlebot3_state_publisher.launch.py
turtlebot3_cartographer/config/: turtlebot3_lds_2d.lua
turtlebot3_cartographer/launch/: cartographer.launch.py
turtlebot3_cartographer/rviz/: tb3_cartographer.rviz
turtlebot3_description/: CMakeLists.txt  README.md
turtlebot3_description/launch/: robot_description.launch.py
turtlebot3_description/rviz/: config.rviz
turtlebot3_description/urdf/: turtlebot3_waffle_pi.urdf.xacro
turtlebot3_navigation2/launch/: navigation2.launch.py
turtlebot3_navigation2/param/: waffle_pi.yaml  wp_nav2_params.yaml  (+1 more)
turtlebot3_sim/: CMakeLists.txt  package.xml
turtlebot3_sim/launch/: simulation.launch.py  spawn_tb3.launch.py
turtlebot3_sim/maps/small_building/: my_map.pgm  my_map.yaml
turtlebot3_sim/models/cafe_table/: model-1_4.sdf
turtlebot3_sim/models/small_building/: model.config  model.sdf
turtlebot3_sim/models/small_building/meshes/: Small_BuildingV3_exterior.dae  Small_BuildingV3_floor.dae  Small_BuildingV3_interior.dae  Small_BuildingV3_interior.fbx  Small_BuildingV3_interior.mtl
turtlebot3_sim/src/: showSimRate.py
turtlebot3_sim/worlds/: empty.world  turtlebot3_autorace.world  turtlebot3_autorace_2020.world  turtlebot3_house.world  turtlebot3_stage_1.world  turtlebot3_stage_2.world  turtlebot3_stage_3.world  turtlebot3_stage_4.world  turtlebot3_world.world  xe484.world
turtlebot3_teleop/: setup.py
(+2 files in other folders)
